--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,7 @@
 @import './contacts.css';
 @import './backgrounds.css';
 @import './responsive.css';
+@import './app.css';
 
 /* Правила для устранения разрывов между секциями */
 section {
